<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phone</string>
    <string name="tab_dail">Dail</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_call_log">Call log</string>
    <string name="update">Update</string>
    <string name="letter_search">Search</string>
    <string name="log_in">Received calls</string>
    <string name="log_miss">Missed calls</string>
    <string name="log_out">Dialed calls</string>
    <string name="dialog_update_contact">After update your contacts,you can see the phone number</string>
    <string name="dialog_update_callog">After update your call logs,you can see the phone number</string>
    <string name="dialog_updating">Updating,Please wait…</string>
    <string name="dialog_updated">Updated</string>
    <string name="call">Call</string>
    <string name="hand_up">Hang up</string>
    <string name="call_outing">Calling</string>
    <string name="call_in">Calling</string>
    <string name="call_talking">On Talking</string>
    <string name="call_over">Call end</string>
    <string name="mute">Mute</string>
    <string name="switch_channel">Switch</string>
    <string name="comfirm">Confirm</string>
    <string name="tab_text1">键盘</string>
    <string name="tab_text4">蓝牙设置</string>
    <string name="log_all">全部通话</string>
    <string name="no_call_log">无通话记录</string>
    <string name="no_contacts">无联系人</string>
    <string name="bt_not_connect">蓝牙未连接</string>
    <string name="look_up">查找</string>
    <string name="bt_connect">蓝牙连接</string>
    <string name="connect_que">未连接到蓝牙设备，是否进行设置？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="pb_download">电话本下载</string>
    <string name="download_que">确定下载电话本？</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="modify">更改</string>
    <string name="bt_name">蓝牙名称</string>
    <string name="bt_pin">蓝牙PIN码</string>
    <string name="con_device">已连接设备</string>
    <string name="paired_device">已配对设备</string>
    <string name="select_device">选取设备</string>
    <string name="search">搜索</string>
    <string name="cancel_search">取消搜索</string>
    <string name="confirm_disconnect">\t确定断开连接？</string>
    <string name="confirm_connect">\t确定连接到\n\t\t</string>
    <string name="btname_hint">蓝牙名称不能超过15位！</string>
    <string name="pincode_hint">请输入4位数字！</string>
    <string name="device_around">附近的设备</string>
    <string name="connected">已连接</string>
    <string name="disconnected">未连接</string>
    <string name="paired">已配对</string>
    <string name="connecting">正在连接...</string>
    <string name="disconnecting">正在断开...</string>
    <string name="no_search">未搜索到设备</string>
    <string name="unknown_device">未知设备</string>
    <string name="unknown">Unknown</string>
    <string name="bt_connect_info">蓝牙设备已连接</string>
    <string name="bt_disconnect_info">蓝牙设备断开</string>
    <string name="read_hint1">正在下载，请稍后...</string>
    <string name="read_hint2">同步中，已下载：&#160;</string>
    <string name="read_hint3">下载成功</string>
    <string name="coming_now">Calling…</string>
    <string name="accept">Call</string>
    <string name="reject">Hang up</string>
    <string name="no_data"></string>
    
    <string name="reject_updating">Reject updating</string>
    <string name="update_timeout">Update timeout</string>
    <string name="update_failed">Update failed, make sure your phone allows to update.</string>
    <string name="update_failed_logs">Update failed, make sure your phone allows to update.</string>
    
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_star">*</string>
    <string name="key_pound">#</string>

</resources>