<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false" >

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@drawable/key_divide"
            android:showDividers="middle" >

            <TextView
                android:id="@+id/key_1"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_1" />

            <TextView
                android:id="@+id/key_2"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_2" />

            <TextView
                android:id="@+id/key_3"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dial_key_row_margin"
            android:layout_weight="1"
            android:divider="@drawable/key_divide"
            android:showDividers="middle" >

            <TextView
                android:id="@+id/key_4"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_4" />

            <TextView
                android:id="@+id/key_5"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_5" />

            <TextView
                android:id="@+id/key_6"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dial_key_row_margin"
            android:layout_weight="1"
            android:divider="@drawable/key_divide"
            android:showDividers="middle" >

            <TextView
                android:id="@+id/key_7"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_7" />

            <TextView
                android:id="@+id/key_8"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_8" />

            <TextView
                android:id="@+id/key_9"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dial_key_row_margin"
            android:layout_weight="1"
            android:divider="@drawable/key_divide"
            android:showDividers="middle" >

            <TextView
                android:id="@+id/key_star"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_star" />

            <TextView
                android:id="@+id/key_0"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_0" />

            <TextView
                android:id="@+id/key_pound"
                style="@style/style_dial_keyboard_key"
                android:text="@string/key_pound" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/keyboard_btn_margin"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/key_delete"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.1"
            android:background="@drawable/dial_key_selector"
            android:src="@drawable/btn_delete" />

        <com.hwatong.btphone.ui.DrawableTextView
            android:id="@+id/key_mute"
            style="@style/style_dial_keyboard_key"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dial_key_row_margin"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_mute_selector"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:text="@string/mute"
            android:textSize="16dp" />

        <com.hwatong.btphone.ui.DrawableTextView
            android:id="@+id/key_switch_channel"
            style="@style/style_dial_keyboard_key"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dial_key_row_margin"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_track_selector"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:text="@string/switch_channel"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>