<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   >

    <ImageView
        android:id="@+id/iv_talking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_dial_people"
        android:layout_gravity="center"
        android:visibility="gone"
        />
    
    <FrameLayout
        android:id="@+id/fl_coming"
        android:layout_width="599dp"
        android:layout_height="216dp"
        android:background="#dd3c3c3c"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_calling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="68dp"
            android:text="@string/coming_now"
            android:textSize="21sp" />

        <FrameLayout
            android:id="@+id/fl_accept"
            android:layout_width="190dp"
            android:layout_height="63dp"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="131dp"
            android:background="@drawable/call_selector"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:src="@drawable/icon_call" />

            <TextView
                android:id="@+id/tv_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:text="@string/accept"
                android:textColor="#ffffff"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_reject"
            android:layout_width="190dp"
            android:layout_height="63dp"
            android:layout_marginLeft="301dp"
            android:layout_marginTop="131dp"
            android:background="@drawable/hand_up_selector"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:src="@drawable/icon_hand_up" />

            <TextView
                android:id="@+id/tv_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:text="@string/reject"
                android:textColor="#ffffff"
                android:textSize="17sp" />
        </FrameLayout>
    </FrameLayout>
   </FrameLayout>